# research-assitant

./: .env.example  .gitignore  COMMANDS.md  README.md  debug_instagram.py  debug_x.py  instagram_fbsearch.json  pyproject.toml  x_search_timeline.json
.claude/skills/asset-pack/: SKILL.md
.claude/skills/compare-runs/: SKILL.md
.claude/skills/doctor/: SKILL.md
.claude/skills/social-post-brief/: SKILL.md
.claude/skills/social-post-brief/templates/: post-brief-template.md
.claude/skills/trend-scan/: SKILL.md
.claude/skills/trend-scan/references/: output-files.md
.claude/skills/watchlist-ops/: SKILL.md
src/last30free/: __init__.py  __main__.py  alerts.py  cli.py  comparison.py  config.py  dashboard.py  enrichment.py  generator.py  intent.py  models.py  notification_store.py  notifications.py  orchestrator.py  parsers.py  rendering.py  reporting.py  run_index.py  synthesis.py  video_fetch.py  watchlist.py
src/last30free/adapters/: __init__.py  base.py  facebook.py  hn.py  instagram.py  reddit.py  tiktok.py  x.py  youtube.py
src/last30free/skills/: facebook_post.md  instagram_carousel.md  instagram_reel.md  youtube_script.md
tests/: test_alerts.py  test_cli_smoke.py  test_comparison.py  test_hn_adapter.py  test_instagram_adapter.py  test_latest_and_watch_payloads.py  test_notification_store.py  test_notifications.py  test_reddit_adapter.py  test_reporting.py  test_run_index.py  test_synthesis.py  test_tiktok_adapter.py  test_watchlist.py  test_x_adapter.py  test_youtube_adapter.py
